; ModuleID = '/home/carl/AnghaBench/libgit2/tests/merge/extr_driver.c_test_merge_driver__shutdown_is_called.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/merge/extr_driver.c_test_merge_driver__shutdown_is_called.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }
%struct.TYPE_3__ = type { i64, i64 }

@test_driver_custom = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@test_driver_wildcard = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@.str = private unnamed_addr constant [7 x i8] c"custom\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_merge_driver__shutdown_is_called() #0 {
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @test_driver_custom, i32 0, i32 0), align 4
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @test_driver_custom, i32 0, i32 1), align 4
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @test_driver_wildcard, i32 0, i32 1), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @test_driver_wildcard, i32 0, i32 0), align 8
  %1 = call i32 @set_gitattributes_to(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 (...) @merge_branch()
  %3 = call i32 (...) @test_drivers_unregister()
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @test_driver_custom, i32 0, i32 0), align 4
  %5 = call i32 @cl_assert(i32 %4)
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @test_driver_custom, i32 0, i32 1), align 4
  %7 = call i32 @cl_assert(i32 %6)
  %8 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @test_driver_wildcard, i32 0, i32 1), align 8
  %9 = icmp ne i64 %8, 0
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i32 @cl_assert(i32 %11)
  %13 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @test_driver_wildcard, i32 0, i32 0), align 8
  %14 = icmp ne i64 %13, 0
  %15 = xor i1 %14, true
  %16 = zext i1 %15 to i32
  %17 = call i32 @cl_assert(i32 %16)
  %18 = call i32 (...) @test_drivers_register()
  ret void
}

declare dso_local i32 @set_gitattributes_to(i8*) #1

declare dso_local i32 @merge_branch(...) #1

declare dso_local i32 @test_drivers_unregister(...) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @test_drivers_register(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
